Add Link to Github

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -43,6 +43,9 @@
             </div>
           </div>
       </form>
+      <a class="button is-warning" href="https://github.com/M4cs/clutrack-io" target="_blank">
+        View Source Code
+      </a>
     </div>
   </section>
   <script src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js"
