--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -55,7 +55,7 @@
                       Displaying Rewards for Wallet:
                   </h1>
                   
-                      <a src="https://bscscan.com/address/{{wallet_addr}}" target="_blank"><p class="subtitle" style="color: rgb(104, 104, 104)">{{wallet_addr}}</p></a>
+                      <a src="https://bscscan.com/address/{{wallet_addr}}" target="_blank" class="subtitle" style="color: rgb(104, 104, 104)">{{wallet_addr}}</a>
                   <p class="subtitle" style="color: black">
                     Current Balance: {{w3.fromWei(Decimal(contract.functions.balanceOf(wallet_addr).call())* (Decimal(10) ** 9), "ether")}}
                     <br>
