--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -97,6 +97,18 @@
                 </div>
             </div>
         </div>
+        <div class="hero-foot">
+            <div class="container has-text-centered">
+                <p>
+                <strong>Clutrack.io</strong> was created by <a href="https://twitter.com/maxbridgland">Max Bridgland</a>. The source code is licensed
+                <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+                is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>. We will never request to withdraw from your account. If you ever get a request
+                that requires you pay gas, reject it! <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+                is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>. We will never request to withdraw from your account. If you ever get a request
+                that requires you pay gas, reject it! <strong>You can Donate CLU or any ERC/BEP-20 Token to: 0x44f6498D1403321890F3f2917E00F22dBDE3577a</strong>
+                </p>
+            </div>
+    </div>
     </section>
     <script src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js" type="application/javascript"></script>
     <script src="assets/reward.js"></script>
