--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -67,7 +67,7 @@
 
                 </h1>
                 <p class="subtitle">
-                    Connect to your BSC Wallet<br>
+                    Connect to your BSC Wallet and join {{count}} others tracking their rewards<br>
                 </p>
                 <button id="rusty" onclick="sign()" class="button is-rounded is-warning">
                     Sign In With Wallet
