--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -9,6 +9,18 @@
         text-align: center;
         min-height: 100vh;
     }
+    html {
+        overflow: scroll;
+        overflow-x: hidden;
+    }
+    ::-webkit-scrollbar {
+        width: 0;  /* Remove scrollbar space */
+        background: transparent;  /* Optional: just make scrollbar invisible */
+    }
+    /* Optional: show position indicator in red */
+    ::-webkit-scrollbar-thumb {
+        background: #4d4d4d;
+    }
 </style>
 
 <head>
