--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -19,7 +19,7 @@
     }
     /* Optional: show position indicator in red */
     ::-webkit-scrollbar-thumb {
-        background: #FF0000;
+        background: #4d4d4d;
     }
 </style>
 
