--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -95,8 +95,8 @@
                     <a src="https://bscscan.com/address/{{wallet_addr}}" target="_blank" class="subtitle"
                         style="color: rgb(104, 104, 104)">{{wallet_addr}}</a>
                     <p class="subtitle" style="color: black">
-                        Current Balance: {{w3.fromWei(Decimal(contract.functions.balanceOf(wallet_addr).call())*
-                        (Decimal(10) ** 9), "ether")}}
+                        Current Balance: {{f"{w3.fromWei(Decimal(contract.functions.balanceOf(wallet_addr).call())*
+                        (Decimal(10) ** 9), 'ether'):,}"}}
                         <br>
                         RPB = Reward Per Block (0.3 Blocks per second are processed)
                     </p>
