--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -123,7 +123,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.2.1/dist/chart.min.js"></script>
     <script src="assets/reward.js"></script>
     <script>
-        const isVisible = true;
+        let isVisible = true;
         document.addEventListener("visibilitychange", function() {
             isVisible = !document.hidden;
         }, false);
