--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -121,6 +121,7 @@
     </section>
     <script src="https://cdn.ethers.io/lib/ethers-5.0.umd.min.js" type="application/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@3.2.1/dist/chart.min.js"></script>
+    <script src="assets/abi.js"></script>
     <script src="assets/reward.js"></script>
     <script>
         window.addEventListener('load', function () {
