Update Favicon and Embed

--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -25,6 +25,7 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="icon" href="https://clucoin.com/static/images/3000.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CLUTrack.io - CluCoin Redistribution Tracker</title>
     <meta name="title" content="CLUTrack.io - CluCoin Redistribution Tracker">
@@ -33,7 +34,7 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:url" content="https://clutrack.io/">
     <meta property="og:title" content="CLUTrack.io - CluCoin Redistribution Tracker">
     <meta property="og:description"
         content="Track the rewards you gain from holding CLU in your wallet. Link with one-click and start seeing those gains.">
@@ -42,7 +43,7 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://metatags.io/">
+    <meta property="twitter:url" content="https://clutrack.io/">
     <meta property="twitter:title" content="CLUTrack.io - CluCoin Redistribution Tracker">
     <meta property="twitter:description"
         content="Track the rewards you gain from holding CLU in your wallet. Link with one-click and start seeing those gains.">
