--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,6 +25,7 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="icon" href="https://clucoin.com/static/images/favicon/favicon-32x32.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>CLUTrack.io - CluCoin Redistribution Tracker</title>
     <meta name="title" content="CLUTrack.io - CluCoin Redistribution Tracker">
