--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -27,8 +27,8 @@
     <meta charset="utf-8">
     <link rel="icon" href="https://clucoin.com/static/images/favicon/favicon-32x32.png">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CLUTrack.io - CluCoin Redistribution Tracker</title>
-    <meta name="title" content="CLUTrack.io - CluCoin Redistribution Tracker">
+    <title>CluTrack | CLU Reward Tracker</title>
+    <meta name="title" content="CluTrack.io - CluCoin Redistribution Tracker">
     <meta name="description"
         content="Track the rewards you gain from holding CLU in your wallet. Link with one-click and start seeing those gains.">
 
