--- a/app/templates/rewards.html
+++ b/app/templates/rewards.html
@@ -113,7 +113,7 @@
         <div class="hero-foot">
             <div class="container has-text-centered">
                 <p>
-                <strong>Clutrack.io</strong> was created by <a href="https://twitter.com/maxbridgland">Max Bridgland</a>. The website content
+                <strong>Clutrack.io</strong> was created by <a href="https://twitter.com/maxbridgland">Max Bridgland</a> and is <strong>NOT</strong> affiliated with the CluCoin team. The website content
                 is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>. We will never request to withdraw from your account. If you ever get a request
                 that requires you pay gas, reject it! <strong>If you find use and want to support the site you can Donate CLU or any ERC/BEP-20 Token to: 0x44f6498D1403321890F3f2917E00F22dBDE3577a</strong>
                 </p>
