--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -58,7 +58,7 @@
             <div class="navbar">
                 <div class="container">
                     <div class="navbar-brand">
-                        <a class="navbar-item">
+                        <a class="navbar-item" href="https://clutrack.io/">
                             <img src="https://clucoin.com/static/images/3000.png" style="margin-right: 2%" alt="Logo">
                             CLUTRACK.io
                         </a>
