Add Safety Info

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -53,6 +53,7 @@
         content="Track the rewards you gain from holding CLU in your wallet. Link with one-click and start seeing those gains.">
     <meta property="twitter:image" content="https://clucoin.com/static/images/3000.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+    <script src="https://kit.fontawesome.com/bfef34323a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -106,9 +107,17 @@
                 </form>
             </div>
         </div>
+        <div class="hero-foot">
+            <div class="container has-text-centered">
+
+                <a class="subtitle" href="#safetyInfo">
+                    ▼ Safety Info Below ▼
+                </a>
+            </div>
+        </div>
     </section>
     <section class="hero is-dark is-medium">
-        <div class="hero-body">
+        <div class="hero-body" id="safetyInfo">
             <div class="container has-text-centered">
                 <div class="box">
                     <h1 class="title" style="color: black">Is this site safe?</h1>
@@ -124,7 +133,56 @@
                         (@maxbridgland). All source code that this site runs on is available for public viewing and auditing
                         on GitHub. Click the button above to head over to the GitHub Source.
                     </p>
+                    <br><br>
+                    <h1 class="title" style="color: black">Tips to Stay Safe</h1>
+                    <p class="subtitle" style="color: black;">
+                        • Make sure the URL is <strong style="color: black">https://clutrack.io</strong>
+                        <br>
+                        • Never give your 12 Phrase Passcode Key to Anybody EVER
+                        <br>
+                        • Never give your private key and password to Anybody EVER
+                        <br>
+                        • This site will never ask you for your money. If it does check the URL
+                    </p>
                 </div>
+                <div class="box">
+                    <div class="container has-text-centered">
+                        <h1 class="title" style="color: black">Socials</h1>
+                        <div class="field is-grouped-centered">
+                            <div class="row">
+
+                                <a class="button" href="github.com/M4cs">
+                                    <span class="icon">
+                                    <i class="fab fa-github"></i>
+                                    </span>
+                                    <span>GitHub</span>
+                                </a>
+                                <a class="button is-info" href="twitter.com/maxbridgland">
+                                    <span class="icon">
+                                        <i class="fab fa-twitter"></i>
+                                    </span>
+                                    <span>@maxbridgland</span>
+                                </a>
+                                <a class="button is-dark" href="linkedin.com/id/maxbridgland">
+                                    <span class="icon is-small">
+                                    <i class="fab fa-linkedin"></i>
+                                    </span>
+                                    <span>LinkedIn</span>
+                                </a>
+                            </div>
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="hero-foot">
+            <br><br>
+            <div class="container has-text-centered">
+                <p>
+                <strong>Clutrack.io</strong> was created by <a href="https://twitter.com/maxbridgland">Max Bridgland</a> and is <strong>NOT</strong> affiliated with the CluCoin team. The website content
+                is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>. We will never request to withdraw from your account. If you ever get a request
+                that requires you pay gas, reject it! <strong>If you find use and want to support the site you can Donate CLU or any ERC/BEP-20 Token to: 0x44f6498D1403321890F3f2917E00F22dBDE3577a</strong>
+                </p>
             </div>
         </div>
     </section>
