--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -151,19 +151,19 @@
                         <div class="field is-grouped-centered">
                             <div class="row">
 
-                                <a class="button" href="github.com/M4cs">
+                                <a class="button" href="https://github.com/M4cs">
                                     <span class="icon">
                                     <i class="fab fa-github"></i>
                                     </span>
                                     <span>GitHub</span>
                                 </a>
-                                <a class="button is-info" href="twitter.com/maxbridgland">
+                                <a class="button is-info" href="https://twitter.com/maxbridgland">
                                     <span class="icon">
                                         <i class="fab fa-twitter"></i>
                                     </span>
                                     <span>@maxbridgland</span>
                                 </a>
-                                <a class="button is-dark" href="linkedin.com/id/maxbridgland">
+                                <a class="button is-dark" href="https://linkedin.com/id/maxbridgland">
                                     <span class="icon is-small">
                                     <i class="fab fa-linkedin"></i>
                                     </span>
